--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
   "license": "MIT",
   "devDependencies": {
     "@cosmjs/cli": "^0.27.1"
+  },
+  "dependencies": {
+    "config": "^3.3.7"
   }
 }
