--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "scripts": {
     "gen-addr": "cosmwasm-cli --init scripts/generate_address.ts",
-    "init-sg721": "cosmwasm-cli --init scripts/init-sg721.ts"
+    "init-sg721": "cosmwasm-cli --init scripts/init-sg721.ts",
+    "pack-images": "ipfs-car --pack images --output images.car"
   }
 }
