Ignore .car files

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,6 @@ coverage/
 !.yarn/sdks
 # We are not using yarn's deferred versioning for now (see https://yarnpkg.com/features/release-workflow)
 # !.yarn/versions
+
+# IPFS
+*.car
