Read config file

--- a/config.json
+++ b/config.json
@@ -1,4 +1,6 @@
 {
+  "mnemonic": "enlist hip relief stomach skate base shallow young switch frequent cry park",
+  "rpcEndpoint": "https://rpc.devnet.publicawesome.dev:443",
   "baseTokenURI": "",
   "numTokens": 0,
   "contractCodeId": 0,
