--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "ipfs-car": "^0.6.1"
   },
   "scripts": {
-    "gen-addr": "cosmwasm-cli --init scripts/generate_address.ts --code 'process.exit(0)'",
+    "account": "cosmwasm-cli --init scripts/account.ts --code 'process.exit(0)'",
     "init": "cosmwasm-cli --init scripts/init.ts --code 'process.exit(0)'",
+    "mint": "cosmwasm-cli --init scripts/mint.ts --code 'process.exit(0)'",
     "pack-images": "ipfs-car --pack images --output images.car",
     "pack-metadata": "ipfs-car --pack metadata --output metadata.car"
   }
