--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "pack-metadata": "ipfs-car --pack metadata --output metadata.car",
     "account": "cosmwasm-cli --init scripts/account.ts --code 'process.exit(0)'",
     "init": "cosmwasm-cli --init scripts/init.ts --code 'process.exit(0)'",
-    "mint": "cosmwasm-cli --init scripts/mint.ts --code 'process.exit(0)'"
+    "mint": "cosmwasm-cli --init scripts/mint.ts --code 'process.exit(0)'",
+    "load": "cosmwasm-cli --init scripts/load.ts"
   }
 }
