Initial IPFS upload script
Uploads images and metadata folders to IPFS and preforms basic validation.

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,6 @@ coverage/
 !.yarn/sdks
 # We are not using yarn's deferred versioning for now (see https://yarnpkg.com/features/release-workflow)
 # !.yarn/versions
+
+# Config files
+config.js
