Address PR feedback

--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "pack-images": "ipfs-car --pack images --output images.car",
     "pack-metadata": "ipfs-car --pack metadata --output metadata.car",
     "account": "cosmwasm-cli --init scripts/account.ts --code 'process.exit(0)'",
-    "init-sg721": "cosmwasm-cli --init scripts/init-sg721.ts --code 'process.exit(0)'",
-    "init-minter": "cosmwasm-cli --init scripts/init-minter.ts --code 'process.exit(0)'",
+    "init": "cosmwasm-cli --init scripts/init.ts --code 'process.exit(0)'",
     "mint": "cosmwasm-cli --init scripts/mint.ts --code 'process.exit(0)'",
     "load": "cosmwasm-cli --init scripts/load.ts",
     "pinata-upload": "ts-node scripts/pinata-upload.ts"
