--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "pack-images": "ipfs-car --pack images --output images.car",
     "pack-metadata": "ipfs-car --pack metadata --output metadata.car",
     "account": "cosmwasm-cli --init scripts/account.ts --code 'process.exit(0)'",
-    "minter": "cosmwasm-cli --init scripts/init.ts --code 'process.exit(0)'",
+    "minter": "cosmwasm-cli --init scripts/minter.ts --code 'process.exit(0)'",
     "mint": "cosmwasm-cli --init scripts/mint.ts --code 'process.exit(0)'",
     "batch-mint": "cosmwasm-cli --init scripts/mint-batch.ts --code 'process.exit(0)'",
     "whitelist": "cosmwasm-cli --init scripts/whitelist.ts --code 'process.exit(0)'",
