--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "minter": "cosmwasm-cli --init scripts/minter.ts --code 'process.exit(0)'",
     "mint": "cosmwasm-cli --init scripts/mint.ts --code 'process.exit(0)'",
     "nft-storage-upload": "ts-node scripts/nft-storage-upload.ts",
+    "nft-storage-clean": "ts-node scripts/nft-storage-clean.ts",
     "batch-mint": "cosmwasm-cli --init scripts/mint-batch.ts --code 'process.exit(0)'",
     "whitelist": "cosmwasm-cli --init scripts/whitelist.ts --code 'process.exit(0)'",
     "load": "cosmwasm-cli --init scripts/load.ts",
