--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "nft-storage-clean": "ts-node scripts/nft-storage-clean.ts",
     "batch-mint": "cosmwasm-cli --init scripts/mint-batch.ts --code 'process.exit(0)'",
     "whitelist": "cosmwasm-cli --init scripts/whitelist.ts --code 'process.exit(0)'",
-    "load": "cosmwasm-cli --init scripts/load.ts",
+    "query": "cosmwasm-cli --init scripts/query.ts",
     "pinata-upload": "ts-node scripts/pinata-upload.ts",
     "pinata-clean": "ts-node scripts/pinata-clean.ts"
   }
