--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "stargaze-nft",
-  "version": "0.0.1",
-  "main": "index.js",
-  "license": "MIT",
+  "name": "stargaze-tools",
+  "version": "0.1.0",
+  "license": "Apache-2.0",
   "devDependencies": {
     "@cosmjs/cli": "^0.27.1",
     "@types/mime": "^2.0.3"
