--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@cosmjs/cli": "^0.27.1",
+    "cosmwasm": "^1.0.2",
     "@types/mime": "^2.0.3"
   },
   "dependencies": {
@@ -18,13 +18,13 @@
   "scripts": {
     "pack-images": "ipfs-car --pack images --output images.car",
     "pack-metadata": "ipfs-car --pack metadata --output metadata.car",
-    "account": "cosmwasm-cli --init scripts/account.ts --code 'process.exit(0)'",
-    "minter": "cosmwasm-cli --init scripts/minter.ts --code 'process.exit(0)'",
-    "mint": "cosmwasm-cli --init scripts/mint.ts --code 'process.exit(0)'",
+    "account": "npx cosmwasm --init scripts/account.ts --code 'process.exit(0)'",
+    "minter": "npx cosmwasm --init scripts/minter.ts --code 'process.exit(0)'",
+    "mint": "npx cosmwasm --init scripts/mint.ts --code 'process.exit(0)'",
     "nft-storage-upload": "ts-node scripts/nft-storage-upload.ts",
     "nft-storage-clean": "ts-node scripts/nft-storage-clean.ts",
-    "whitelist": "cosmwasm-cli --init scripts/whitelist.ts --code 'process.exit(0)'",
-    "query": "cosmwasm-cli --init scripts/query.ts",
+    "whitelist": "npx cosmwasm --init scripts/whitelist.ts --code 'process.exit(0)'",
+    "query": "npx cosmwasm --init scripts/query.ts",
     "pinata-upload": "ts-node scripts/pinata-upload.ts",
     "pinata-clean": "ts-node scripts/pinata-clean.ts"
   }
