--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "@pinata/sdk": "^1.1.23",
-    "csv-parser": "^3.0.0",
+    "csv-parse": "^5.0.4",
     "files-from-path": "^0.2.3",
     "ipfs-car": "^0.6.1",
     "mime": "^3.0.0",
@@ -24,7 +24,7 @@
     "mint": "cosmwasm-cli --init scripts/mint.ts --code 'process.exit(0)'",
     "nft-storage-upload": "ts-node scripts/nft-storage-upload.ts",
     "nft-storage-clean": "ts-node scripts/nft-storage-clean.ts",
-    "whitelist": "cosmwasm-cli --init scripts/whitelist.ts --code 'process.exit(0)'",
+    "whitelist": "cosmwasm-cli --init scripts/whitelist.ts",
     "query": "cosmwasm-cli --init scripts/query.ts",
     "pinata-upload": "ts-node scripts/pinata-upload.ts",
     "pinata-clean": "ts-node scripts/pinata-clean.ts"
