--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "mint": "cosmwasm-cli --init scripts/mint.ts --code 'process.exit(0)'",
     "nft-storage-upload": "ts-node scripts/nft-storage-upload.ts",
     "nft-storage-clean": "ts-node scripts/nft-storage-clean.ts",
-    "whitelist": "cosmwasm-cli --init scripts/whitelist.ts",
+    "whitelist": "cosmwasm-cli --init scripts/whitelist.ts --code 'process.exit(0)'",
+    "whitelist-file": "cosmwasm-cli --init scripts/whitelist-file.ts",
     "query": "cosmwasm-cli --init scripts/query.ts",
     "pinata-upload": "ts-node scripts/pinata-upload.ts",
     "pinata-clean": "ts-node scripts/pinata-clean.ts"
