--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.7.3",
   "license": "Apache-2.0",
   "devDependencies": {
-    "cosmwasm": "^1.0.2",
-    "@types/mime": "^2.0.3"
+    "@stargazezone/types": "^0.7.2",
+    "@types/inquirer": "^8.2.0",
+    "@types/mime": "^2.0.3",
+    "cosmwasm": "^1.0.2"
   },
   "dependencies": {
     "@pinata/sdk": "^1.1.23",
     "files-from-path": "^0.2.3",
+    "inquirer": "^8.2.0",
     "ipfs-car": "^0.6.1",
     "mime": "^3.0.0",
     "nft.storage": "^6.0.0",
@@ -16,16 +19,17 @@
     "typescript": "^4.5.5"
   },
   "scripts": {
-    "pack-images": "ipfs-car --pack images --output images.car",
-    "pack-metadata": "ipfs-car --pack metadata --output metadata.car",
-    "account": "npx cosmwasm --init scripts/account.ts --code 'process.exit(0)'",
-    "minter": "npx cosmwasm --init scripts/minter.ts --code 'process.exit(0)'",
-    "mint": "npx cosmwasm --init scripts/mint.ts --code 'process.exit(0)'",
+    "account": "ts-node scripts/account.ts",
+    "minter": "ts-node scripts/minter.ts",
+    "mint": "ts-node scripts/mint.ts",
     "nft-storage-upload": "ts-node scripts/nft-storage-upload.ts",
     "nft-storage-clean": "ts-node scripts/nft-storage-clean.ts",
-    "whitelist": "npx cosmwasm --init scripts/whitelist.ts --code 'process.exit(0)'",
-    "query": "npx cosmwasm --init scripts/query.ts",
+    "pack-images": "ipfs-car --pack images --output images.car",
+    "pack-metadata": "ipfs-car --pack metadata --output metadata.car",
     "pinata-upload": "ts-node scripts/pinata-upload.ts",
-    "pinata-clean": "ts-node scripts/pinata-clean.ts"
+    "pinata-clean": "ts-node scripts/pinata-clean.ts",
+    "query": "ts-node scripts/query.ts",
+    "ts": "tsc --noEmit --incremental",
+    "whitelist": "ts-node scripts/whitelist.ts"
   }
 }
