--- a/package.json
+++ b/package.json
@@ -25,18 +25,13 @@
     "mint": "ts-node scripts/mint.ts",
     "nft-storage-upload": "ts-node scripts/nft-storage-upload.ts",
     "nft-storage-clean": "ts-node scripts/nft-storage-clean.ts",
-<<<<<<< HEAD
-    "whitelist": "npx cosmwasm --init scripts/whitelist.ts --code 'process.exit(0)'",
-    "whitelist-file": "npx cosmwasm --init scripts/whitelist-file.ts",
-    "query": "npx cosmwasm --init scripts/query.ts",
-=======
     "pack-images": "ipfs-car --pack images --output images.car",
     "pack-metadata": "ipfs-car --pack metadata --output metadata.car",
->>>>>>> main
     "pinata-upload": "ts-node scripts/pinata-upload.ts",
     "pinata-clean": "ts-node scripts/pinata-clean.ts",
     "query": "ts-node scripts/query.ts",
     "ts": "tsc --noEmit --incremental",
-    "whitelist": "ts-node scripts/whitelist.ts"
+    "whitelist": "ts-node scripts/whitelist.ts",
+    "whitelist-file": "ts-node scripts/whitelist-file.ts"
   }
 }
