--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "scripts": {
     "account": "ts-node scripts/account.ts",
+    "airdrop-file": "ts-node scripts/airdrop-file.ts",
     "minter": "ts-node scripts/minter.ts",
     "mint": "ts-node scripts/mint.ts",
     "nft-storage-upload": "ts-node scripts/nft-storage-upload.ts",
