--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
     "pack-images": "ipfs-car --pack images --output images.car",
     "pack-metadata": "ipfs-car --pack metadata --output metadata.car",
     "pinata-upload": "ts-node scripts/pinata-upload.ts",
-    "pin": "ts-node scripts/pin.ts",
     "pinata-clean": "ts-node scripts/pinata-clean.ts",
     "query": "ts-node scripts/query.ts",
     "ts": "tsc --noEmit --incremental",
     "whitelist": "ts-node scripts/whitelist.ts",
-    "whitelist-file": "ts-node scripts/whitelist-file.ts"
+    "whitelist-file": "ts-node scripts/whitelist-file.ts",
+    "devops-pin": "ts-node devops/pin.ts"
   }
 }
