--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.8.2",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@stargazezone/ts": "^0.4.0",
+    "@stargazezone/ts": "^0.6.0",
     "@stargazezone/types": "^0.9.0",
     "@types/inquirer": "^8.2.0",
     "@types/mime": "^2.0.3",
     "cosmwasm": "^1.0.2"
   },
   "dependencies": {
+    "@cosmjs/encoding": "^0.29.1",
     "@pinata/sdk": "^1.1.23",
     "csv-parse": "^5.0.4",
     "files-from-path": "^0.2.3",
