--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.8.2",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@stargazezone/ts": "^0.7.0",
+    "@stargazezone/launchpad": "^0.25.1",
     "@stargazezone/types": "^0.9.0",
     "@types/inquirer": "^8.2.0",
     "@types/mime": "^2.0.3",
