query owner nft count

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "pinata-clean": "ts-node scripts/pinata-clean.ts",
     "query": "ts-node scripts/query.ts",
     "query-minters": "ts-node scripts/query-minters.ts",
+    "query-owner-nft-count": "ts-node scripts/query-owner-nft-count.ts",
     "shuffle": "ts-node scripts/shuffle.ts",
     "update-metadata": "ts-node scripts/update-metadata.ts",
     "query-mint-count": "ts-node scripts/query-mint-count.ts",
