WIP use whitelist file

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "ts": "tsc --noEmit --incremental",
     "whitelist": "ts-node scripts/whitelist.ts",
     "whitelist-flex": "ts-node scripts/whitelist-flex.ts",
+    "whitelist-flex-file": "ts-node scripts/whitelist-flex-file.ts",
     "whitelist-file": "ts-node scripts/whitelist-file.ts",
     "devops-pin": "ts-node devops/pin.ts",
     "devops-rarity": "ts-node devops/rarity.ts",
