File structure is changed required dir changes made

--- a/package.json
+++ b/package.json
@@ -23,43 +23,43 @@
     "typescript": "^4.5.5"
   },
   "scripts": {
-    "account": "ts-node scripts/account.ts",
-    "add-member": "ts-node scripts/add-member.ts",
-    "airdrop-file": "ts-node scripts/airdrop-file.ts",
-    "base-minter": "ts-node scripts/base-minter.ts",
-    "minter": "ts-node scripts/minter.ts",
-    "mint": "ts-node scripts/mint.ts",
-    "burn": "ts-node scripts/burn.ts",
-    "nft-storage-upload": "ts-node scripts/nft-storage-upload.ts",
-    "nft-storage-clean": "ts-node scripts/nft-storage-clean.ts",
+    "account": "ts-node src/account.ts",
+    "add-member": "ts-node src/splits/add-member.ts",
+    "airdrop-file": "ts-node src/collection-actions/execute/airdrop-file.ts",
+    "base-minter": "ts-node src/create-collection/base-minter.ts",
+    "minter": "ts-node src/create-collection/minter.ts",
+    "mint": "ts-node src/collection-actions/execute/mint.ts",
+    "burn": "ts-node src/collection-actions/execute/burn.ts",
+    "nft-storage-upload": "ts-node src/create-collection/nft-storage-upload.ts",
+    "nft-storage-clean": "ts-node src/create-collection/nft-storage-clean.ts",
     "pack-images": "ipfs-car --pack images --output images.car",
     "pack-metadata": "ipfs-car --pack metadata --output metadata.car",
-    "pinata-upload": "ts-node scripts/pinata-upload.ts",
-    "pinata-clean": "ts-node scripts/pinata-clean.ts",
-    "query": "ts-node scripts/query.ts",
-    "query-minters": "ts-node scripts/query-minters.ts",
-    "query-owner-nft-count": "ts-node scripts/query-owner-nft-count.ts",
-    "shuffle": "ts-node scripts/shuffle.ts",
-    "update-metadata": "ts-node scripts/update-metadata.ts",
-    "query-mint-count": "ts-node scripts/query-mint-count.ts",
+    "pinata-upload": "ts-node src/create-collection/pinata-upload.ts",
+    "pinata-clean": "ts-node src/create-collection/pinata-clean.ts",
+    "query": "ts-node src/query.ts",
+    "query-minters": "ts-node src/collection-actions/query/query-minters.ts",
+    "query-owner-nft-count": "ts-node src/collection-actions/query/query-owner-nft-count.ts",
+    "shuffle": "ts-node src/collection-actions/execute/shuffle.ts",
+    "update-metadata": "ts-node src/collection-actions/execute/update-metadata.ts",
+    "query-mint-count": "ts-node src/collection-actions/query/query-mint-count.ts",
     "ts": "tsc --noEmit --incremental",
-    "whitelist": "ts-node scripts/whitelist.ts",
-    "whitelist-flex": "ts-node scripts/whitelist-flex.ts",
-    "whitelist-flex-file": "ts-node scripts/whitelist-flex-file.ts",
-    "whitelist-file": "ts-node scripts/whitelist-file.ts",
+    "whitelist": "ts-node src/whitelist/whitelist.ts",
+    "whitelist-flex": "ts-node src/whitelist/whitelist-flex.ts",
+    "whitelist-flex-file": "ts-node src/whitelist/whitelist-flex-file.ts",
+    "whitelist-file": "ts-node src/whitelist/whitelist-file.ts",
     "devops-pin": "ts-node devops/pin.ts",
     "devops-rarity": "ts-node devops/rarity.ts",
     "devops-launch": "ts-node devops/testnet-launch.ts",
-    "floor": "ts-node marketplace/floor-price.ts",
-    "sweep": "ts-node marketplace/floor-sweeper.ts",
-    "group": "ts-node scripts/splits.ts",
-    "splits": "ts-node scripts/splits.ts splits",
-    "splits-combo": "ts-node scripts/splits.ts combo",
-    "distribute-splits": "ts-node scripts/distribute-splits.ts",
-    "query-splits": "ts-node scripts/query-splits.ts query-splits",
-    "vending-snapshot": "ts-node scripts/vending-snapshot.ts",
-    "mint-for-file": "ts-node scripts/mint-for-file.ts",
-    "transfer-nft": "ts-node scripts/transfer-nft.ts",
-    "transfer-file": "ts-node scripts/transfer-file.ts"
+    "floor": "ts-node src/marketplace/floor-price.ts",
+    "sweep": "ts-node src/marketplace/floor-sweeper.ts",
+    "group": "ts-node src/splits/splits.ts",
+    "splits": "ts-node src/splits/splits.ts splits",
+    "splits-combo": "ts-node src/splits/splits.ts combo",
+    "distribute-splits": "ts-node src/splits/distribute-splits.ts",
+    "query-splits": "ts-node src/splits/query-splits.ts query-splits",
+    "vending-snapshot": "ts-node src/vending-snapshot.ts",
+    "mint-for-file": "ts-node src/collection-actions/execute/mint-for-file.ts",
+    "transfer-nft": "ts-node src/collection-actions/execute/transfer-nft.ts",
+    "transfer-file": "ts-node src/collection-actions/execute/transfer-file.ts"
   }
 }
